--- a/promesas/03-fetching/.env
+++ b/promesas/03-fetching/.env
@@ -1,2 +1,3 @@
 VITE_API_URL = https://jsonplaceholder.typicode.com/users/
 VITE_API_URL_SW = https://swapi.dev/api/people/
+VITE_IMAGE_SW = https://starwars-visualguide.com/assets/img/characters/
