--- a/repaso-examen/package.json
+++ b/repaso-examen/package.json
@@ -7,9 +7,14 @@
     "start": "vite",
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "examen": "json-server --watch ./src/data/db.json --port 4000"
+
   },
   "devDependencies": {
     "vite": "^5.4.10"
+  },
+  "dependencies": {
+    "json-server": "^1.0.0-beta.3"
   }
 }
